--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <h1>Tutorials Section</h1>            
+                    <h1>Tutorials Section</h1> <br><br>           
                 </div>
             </div>
         </div>
